# index_fund

./: .gitignore  readme.md
docs/: index.md  lsd_ch1_ch2.md  lsd_ch3_ch4.md  lsd_ch5_ch6.md  lsd_ch7_ch8.md
docs/code/: plot_ch10_ch13.py  plot_ch1_ch2.py  plot_ch3_ch4.py  plot_ch5_ch6.py  plot_ch7_ch8.py  plot_ch9.py  plot_lsd_ch1_ch4.py  plot_lsd_ch5_ch8.py  plot_utils.py
fund_sys/: pyproject.toml
fund_sys/cli/: main.py
fund_sys/cli/commands/: batch_cmd.py  fetch.py  screen.py  shadow_cmd.py  simulate.py  valuation.py
fund_sys/config/: settings.py
fund_sys/fund_sys.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
fund_sys/shadow/: checker.py  portfolio.py  position.py
fund_sys/simulate/: engine.py  report.py
fund_sys/strategy/: formulas.py  indicators.py
memery/: impl_memery.md  lsd_book_notes.md  project_content_quickref.md  project_index_fund_guide.md
ref_code/: FundCombination_analysis.md  FundCrawler_analysis.md  Fund_analysis.md  StockAnal_Sys_analysis.md  fund-strategy_analysis.md  xalpha_analysis.md
ref_code/AI_Fund_Assistant/: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  PRD.md  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.qnap.yml  docker-compose.yml  fund_monitor_main.py  overview.md  requirements.txt
ref_code/AI_Fund_Assistant/backend/: .dockerignore  Dockerfile  __init__.py  config.py  database.py  main.py  requirements.txt
ref_code/AI_Fund_Assistant/config/: settings.py
ref_code/FundCrawler/: .gitignore  CLAUDE.md  README.md  requirements.txt  result_analyse.py  run.py  test_run.py
(+132 files in other folders)
