[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-sys"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sqlalchemy>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
fund = "fund_sys.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["fund_sys*"]
